--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 }
 
 section{
-    padding-top: 90px ;
+    padding-top: 100px ;
+    position: relative;
 }
 
 .btn.button{
@@ -19,7 +20,7 @@ section{
     font-size: 30px;
 }
 
-.btn.button:hover{
+.btn.button:hover, .btn.button.active{
     background-color: black;
     color: white;
     border: 3px solid black;
@@ -29,6 +30,37 @@ section{
     animation: 2s upDown infinite;
 }
 
+
+.about-exp-item{
+    margin-top: 32px;
+}
+
+.about-exp-item-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   
+}
+
+.about-exp-item-detail{
+    display: none;
+}
+
+section::before{
+    z-index: -1;
+    content: '';
+    color: grey;
+    position: absolute;
+    font-size: 52px;
+    opacity: 0.25;
+    font-weight: 700;
+    top: 20px;
+    left: -30px;
+}
+
+.about::before{
+    content: 'About';
+}
 
 @keyframes upDown{
     0%{
